--- a/archlinuxcn/rune-player-git/rune.desktop
+++ b/archlinuxcn/rune-player-git/rune.desktop
@@ -7,6 +7,7 @@ Icon=rune
 Exec=rune %U
 TryExec=/usr/bin/rune
 Terminal=false
+StartupWMClass=rune
 Categories=AudioVideo;Player;
 Keywords=rune;player;rune-player;Music;
 X-DBUS-StartupType=Unique
