--- a/archlinuxcn/qcm-git/PKGBUILD
+++ b/archlinuxcn/qcm-git/PKGBUILD
@@ -43,12 +43,8 @@ makedepends=(
 	'ninja')
 provides=("${_pkgname}")
 conflicts=("${_pkgname}")
-source=(
-	"git+${url}.git"
-	"${_pkgname}-fix-qt6.8-build.patch::${url}/pull/36.patch"
-)
-sha256sums=('SKIP'
-            '495a50534960a0f46b6e843543dd06d82f4c7514dd78122a074191f759ba6316')
+source=("git+${url}.git")
+sha256sums=('SKIP')
 
 pkgver() {
 	cd Qcm
@@ -58,7 +54,6 @@ pkgver() {
 prepare() {
 	cd Qcm
 	git submodule update --init --recursive
-	patch -p1 <"../${_pkgname}-fix-qt6.8-build.patch"
 	mkdir build
 }
 
