--- a/archlinuxcn/python-multimethod/lilac.yaml
+++ b/archlinuxcn/python-multimethod/lilac.yaml
@@ -7,8 +7,8 @@ update_on:
   - source: github
     github: coady/multimethod
     use_max_tag: true
+    exclude_regex: '.*rc.*'
   - source: manual
     manual: 2
   - alias: python
 # vim:set ts=2 sw=2 et:
-
