fix: remove duplicated update_on

--- a/archlinuxcn/caddy-bgme/PKGBUILD
+++ b/archlinuxcn/caddy-bgme/PKGBUILD
@@ -1,4 +1,4 @@
-# Base on https://github.com/archlinux/svntogit-packages/tree/packages/bash/trunk
+# Base on https://gitlab.archlinux.org/archlinux/packaging/packages/caddy
 # Contributor: Levente Polyak <anthraxx[at]archlinux[dot]org>
 # Contributor: Christian Rebischke <chris.rebischke@archlinux.org>
 # Contributor: Wei Congrui < crvv.mail at gmail dot com >
