audacity-git: add missing depends & makedepends for qt6

--- a/archlinuxcn/audacity-git/PKGBUILD
+++ b/archlinuxcn/audacity-git/PKGBUILD
@@ -48,6 +48,11 @@ depends=(
 	'vamp-plugin-sdk'
 	'wavpack'
 	'wxwidgets-common'
+	'qt6-base'
+	'qt6-networkauth'
+	'qt6-declarative'
+	'qt6-svg'
+	'qt6-5compat'
 )
 makedepends=(
 	'cmake'
@@ -60,6 +65,7 @@ makedepends=(
 	'xcb-util-keysyms'
 	'gtkmm3'
 	'libxkbcommon-x11'
+	'qt6-tools'
 )
 optdepends=(
 	'audacity-docs: for documentation'
