--- a/archlinuxcn/tsukimi-git/PKGBUILD
+++ b/archlinuxcn/tsukimi-git/PKGBUILD
@@ -1,7 +1,7 @@
 _pkgname="tsukimi"
 pkgname="${_pkgname}-git"
 pkgver=0.16.2.r768.gf43bca
-pkgrel=3
+pkgrel=1
 pkgdesc='A simple third-party Emby client'
 arch=('x86_64')
 url="https://github.com/tsukinaha/tsukimi"
@@ -35,6 +35,7 @@ pkgver() {
 
 prepare() {
 	cd "${srcdir}/${_pkgname}"
+	git remote update
 	git submodule update --init --recursive
 	cargo fetch --locked --target "$CARCH-unknown-linux-gnu"
 }
@@ -48,12 +49,11 @@ build() {
 
 package() {
 	cd "${_pkgname}"
-	export RUSTUP_TOOLCHAIN=stable
+
 	install -Dm755 -t "${pkgdir}/usr/bin/" "target/release/${_pkgname}"
 	install -Dm644 -t "${pkgdir}/usr/share/glib-2.0/schemas" "moe.tsuna.tsukimi.gschema.xml"
 	install -Dm644 -t "${pkgdir}/usr/share/applications/" "${srcdir}/tsukimi.desktop"
 	install -Dm644 -t "${pkgdir}/usr/share/pixmaps/" "resources/ui/icons/tsukimi.png"
 
-	# install i18n files
 	cp -r "i18n/locale" "${pkgdir}/usr/share/locale"
 }
