whatsapp-for-linux: update github source to new name

--- a/archlinuxcn/whatsapp-for-linux/lilac.yaml
+++ b/archlinuxcn/whatsapp-for-linux/lilac.yaml
@@ -7,6 +7,6 @@ post_build_script: git_pkgbuild_commit()
 
 update_on:
   - source: github
-    github: eneshecan/whatsapp-for-linux
+    github: xeco23/WasIstLos
     use_latest_release: true
     prefix: v
