whatsapp-for-linux-git: update github source to new name

--- a/archlinuxcn/whatsapp-for-linux-git/lilac.yaml
+++ b/archlinuxcn/whatsapp-for-linux-git/lilac.yaml
@@ -10,4 +10,4 @@ post_build_script: git_pkgbuild_commit()
 
 update_on:
   - source: github
-    github: eneshecan/whatsapp-for-linux
+    github: xeco23/WasIstLos
