android-apktool: update maintainers
Now case-sensitive?

--- a/archlinuxcn/android-apktool/lilac.yaml
+++ b/archlinuxcn/android-apktool/lilac.yaml
@@ -5,7 +5,7 @@ maintainers:
 build_prefix: extra-x86_64
 
 pre_build_script: |
-    aur_pre_build(maintainers=['muflone'])
+    aur_pre_build(maintainers=['Muflone'])
 
 post_build_script: |
     aur_post_build()
