i3status-rust-git: turn off lto to fix linking error

--- a/archlinuxcn/i3status-rust-git/PKGBUILD
+++ b/archlinuxcn/i3status-rust-git/PKGBUILD
@@ -25,6 +25,7 @@ conflicts=("${_pkgname}")
 provides=("${_pkgname}")
 source=("git+${url}.git")
 sha256sums=('SKIP')
+options=('!lto')
 
 pkgver() {
 	cd "${_pkgname}/"
