mission-center-git: add aarch64 support

--- a/archlinuxcn/mission-center-git/PKGBUILD
+++ b/archlinuxcn/mission-center-git/PKGBUILD
@@ -5,7 +5,7 @@ _pkgname=${pkgname%-git}
 pkgver=0.6.0.r41.gd78c07d
 pkgrel=1
 pkgdesc="Monitor your CPU, Memory, Disk, Network and GPU usage"
-arch=('x86_64')
+arch=('x86_64' 'aarch64')
 url="https://gitlab.com/mission-center-devs/${_pkgname}"
 license=('GPL-3.0-or-later')
 depends=('dmidecode' 'libadwaita' 'nvtop')
