mission-center: add aarch64 support

--- a/archlinuxcn/mission-center/PKGBUILD
+++ b/archlinuxcn/mission-center/PKGBUILD
@@ -5,7 +5,7 @@ pkgver=0.6.1
 _pkgver=$(sed 's/\./-/3' <<<${pkgver})
 pkgrel=1
 pkgdesc="Monitor your CPU, Memory, Disk, Network and GPU usage"
-arch=('x86_64')
+arch=('x86_64' 'aarch64')
 url="https://gitlab.com/mission-center-devs/${pkgname}"
 license=('GPL-3.0-or-later')
 depends=('dmidecode' 'libadwaita' 'nvtop')
