alarmcn/mission-center: remove nvtop from depends

--- a/alarmcn/mission-center/PKGBUILD
+++ b/alarmcn/mission-center/PKGBUILD
@@ -8,7 +8,7 @@ pkgdesc="Monitor your CPU, Memory, Disk, Network and GPU usage"
 arch=('x86_64' 'aarch64')
 url="https://gitlab.com/mission-center-devs/${pkgname}"
 license=('GPL-3.0-or-later')
-depends=('dmidecode' 'libadwaita' 'nvtop')
+depends=('dmidecode' 'libadwaita')
 makedepends=('blueprint-compiler' 'cargo' 'meson')
 checkdepends=('appstream-glib')
 source=("${url}/-/archive/v${_pkgver}/${pkgname}-v${_pkgver}.tar.gz")
