gimp-devel: gimp2-devel -> glib2-devel

--- a/archlinuxcn/gimp-devel/PKGBUILD
+++ b/archlinuxcn/gimp-devel/PKGBUILD
@@ -16,7 +16,7 @@ makedepends=("appstream" "cmake" "glib-networking" "intltool" "libxslt"
 	'libheif' 'libwebp' 'libmng' 'iso-codes' 'aalib' 'zlib' 'libjxl'
 	'gjs' 'luajit' 'meson' 'gobject-introspection'
 	'gi-docgen' 'xorg-server-xvfb' 'vala' 'highway' 'meson' 'qoi-headers'
-	'cfitsio' 'gimp2-devel')
+	'cfitsio' 'glib2-devel')
 checkdepends=('xorg-server-xvfb')
 optdepends=('gutenprint: for sophisticated printing only as gimp has built-in cups print support'
 	'alsa-lib: for MIDI event controller module'
