amdgpu_top-git: remove --locked in prepare()

--- a/archlinuxcn/amdgpu_top-git/PKGBUILD
+++ b/archlinuxcn/amdgpu_top-git/PKGBUILD
@@ -24,7 +24,7 @@ prepare() {
 	cd "${_pkgname}/"
 	export RUSTUP_TOOLCHAIN=stable
 	export CARGO_TARGET_DIR=target
-	cargo fetch --locked --target "$CARCH-unknown-linux-gnu"
+	cargo fetch --target "$CARCH-unknown-linux-gnu"
 }
 
 build() {
