ddnet: fix and re-enable AUR tracking

--- a/archlinuxcn/ddnet/lilac.yaml
+++ b/archlinuxcn/ddnet/lilac.yaml
@@ -5,15 +5,17 @@ maintainers:
     email: Shengyu Zhang <la@archlinuxcn.org>
 
 build_prefix: extra-x86_64
-# pre_build_script: aur_pre_build(maintainers=['rafaelff', 'edg-l'])
-# post_build: aur_post_build
+pre_build_script: aur_pre_build(maintainers=['rafaelff'])
+post_build: aur_post_build
 
 update_on:
-  # - source: aur
-  #   aur: ddnet
+  - source: aur
+    aur: ddnet
   - alias: libssl
   - alias: libcrypto
-  - alias: ffmpeg
+  - source: alpm
+    alpm: ffmpeg
+
 
 repo_depends:
   - pnglite
