apostrophe: drop patched deps

--- a/archlinuxcn/apostrophe/PKGBUILD
+++ b/archlinuxcn/apostrophe/PKGBUILD
@@ -21,9 +21,8 @@ depends=(
     python-chardet
     libadwaita
     webkitgtk-6.0
-    #libspelling-apostrophe
     libspelling
-    gtksourceview5-apostrophe
+    gtksourceview5
     dconf
     pango
     gdk-pixbuf2
