--- a/archlinuxcn/video2x/PKGBUILD
+++ b/archlinuxcn/video2x/PKGBUILD
@@ -4,6 +4,7 @@
 pkgname=video2x
 pkgver=6.0.0.beta.5
 pkgrel=1
+epoch=1
 pkgdesc="Machine learning video/GIF/image upscaling"
 url="https://${pkgname}.org"
 arch=('x86_64' 'aarch64' 'riscv64')
