qefientrymanager-git: remove wayland desktop file & use cmake in install()

--- a/archlinuxcn/qefientrymanager-git/PKGBUILD
+++ b/archlinuxcn/qefientrymanager-git/PKGBUILD
@@ -16,11 +16,9 @@ provides=("${_pkgname}")
 source=(
 	"git+${url}.git"
 	"git+https://github.com/Inokinoki/qefivar.git"
-	"${_pkgname}-wayland.desktop"
 )
 sha256sums=('SKIP'
-            'SKIP'
-            'c31daa87fe9e2b94cbcf3ff073b820e4a91c4b3da160b7a4f8af4c82ee236be2')
+            'SKIP')
 
 pkgver() {
 	cd "${_srcname}/"
@@ -29,35 +27,24 @@ pkgver() {
 
 prepare() {
 	cd "${_srcname}/"
+
 	git submodule init
 	git config submodule.qefivar.url "${srcdir}/qefivar/"
 	git -c protocol.file.allow=always submodule update
+
+	mkdir -p build
 }
 
 build() {
-	cd "${_srcname}/"
-	mkdir build && cd build
-	cmake ..
-	make
+	cd "${_srcname}/build/"
+	cmake -DCMAKE_BUILD_TYPE=None -DCMAKE_INSTALL_PREFIX=/usr ..
+	cmake --build .
 }
 
 package() {
 	cd "${_srcname}/"
 
-	# Binary file
-	install -Dm755 "build/${_srcname}" -t "${pkgdir}/usr/bin/"
-
-	# Desktop file (Xorg)
-	sed -i '/Exec=/c\
-Exec=pkexec env DISPLAY=$DISPLAY XAUTHORITY=$XAUTHORITY QEFIEntryManager
-' "${_pkgname}.desktop"
-	install -Dm644 "${_pkgname}.desktop" -t "${pkgdir}/usr/share/applications/"
-
-	# Desktop file (Wayland)
-	install -Dm644 "${srcdir}/${_pkgname}-wayland.desktop" -t "${pkgdir}/usr/share/applications/"
-
-	# Icon
-	install -Dm644 cc.inoki.qefientrymanager.png -t "${pkgdir}/usr/share/icons/hicolor/96x96/apps/"
+	DESTDIR="${pkgdir}" cmake --install build
 
 	# License
 	install -Dm644 LICENSE -t "${pkgdir}/usr/share/licenses/${_pkgname}/"
